# EPML

./: package-lock.json  package.json
public/: index.html  manifest.json
src/: App.css  App.js
src/components/: BackButton.css  BackButton.js  ModelAccuracyComponents.js  ResultsTable.css  ResultsTable.js
src/components/charts/: ChartContainer.js  ModelAccuracyCards.js  ModelAccuracyChart.js  ModelGroupAccuracyChart.js  TotalAccuracyOverTimeChart.js
src/data/: betfair.py  betfair_response.json  betfair_response_with_odds.json  betfairlight.py  clean.py  pyproject.toml  results_2019-20.json
src/data/mlmodels/: collated_games_data.json  collated_games_data_1.json  merge.py  merged_metrics.json  metrics_results_vader.json  metrics_results_w_roberta.json  metrics_results_wo.json  modifies.py  prediction_w_roberta.py  prediction_w_vadar.py  prediction_wo_sent.py  predictions_results_with_roberta.json  predictions_results_with_vadar.json  predictions_results_without_sent.json  results_2019-20_w_roberta.json  results_2019-20_w_vadar.json  results_2019-20_with_sentiment.json  sentiment.py  test.py  test_sentiment.py
src/data/sentiment/: analysis.py  combine_sentiment_and_results.py
src/pages/: App.css  Dashboard.css  Dashboard.js  DataHub.js  Home.js  LearningCentre.js  LiveForecast.css  LiveForecast.js  ModelGroupComparison.js  TotalScores.js  WiksTopPicks.js
