[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
imbalanced-learn = "^0.12.2"
boto3 = "^1.34.79"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
